[gd_scene load_steps=5 format=3 uid="uid://3smiker6ni50"]

[ext_resource type="Theme" uid="uid://bn6rbmdy60lhr" path="res://Scenes/Styles/BrowserText.tres" id="1_4plhl"]
[ext_resource type="Script" uid="uid://bw5pr4wrf780h" path="res://Scripts/Browser/history_entry.gd" id="1_h5c6k"]
[ext_resource type="Texture2D" uid="uid://blskvfjswul1d" path="res://Assets/Icons/checkbox_white.svg" id="2_h5c6k"]
[ext_resource type="Texture2D" uid="uid://bqpx2lgo0yecb" path="res://Assets/Icons/globe.svg" id="2_k4hqm"]

[node name="HistoryEntry" type="HBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_h5c6k")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
theme = ExtResource("1_4plhl")
theme_override_icons/unchecked = ExtResource("2_h5c6k")
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "2:00PM"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_k4hqm")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Selection - Google Fonts"
vertical_alignment = 1

[node name="DomainLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.817521, 0.817521, 0.817521, 1)
text = "example.com"
vertical_alignment = 1

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
